namespaces/grafana/00-namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: grafana
  name: grafana
